# InspireMusic

./: CF_PAGES_FEASIBILITY.md  LICENSE  README.md  SYNC_ANALYSIS.md  SYNC_IMPLEMENTATION.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  wrangler.toml
.github/workflows/: build.yml
functions/api/auth/: login.ts  register.ts
functions/api/user/: favorites.ts  history.ts  playlists.ts
functions/api/utils/: auth.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AuthModal.tsx  LibraryView.tsx  SearchView.tsx  Sidebar.tsx  SyncIndicator.tsx  UserMenu.tsx
src/components/ui/: CoverImage.tsx
src/services/: sync.ts
src/store/: useAppStore.ts
src/utils/: debounce.ts
